Fix #399 Defer loading avatars until the item becomes visible

--- a/webroot/static/styles/views/thread.css
+++ b/webroot/static/styles/views/thread.css
@@ -117,6 +117,12 @@
   display: block;
   max-width: 100%;
   max-height: 100%;
+  opacity: 1;
+  transition: opacity .4s;
+}
+
+[id$="vertical-thread"] [itemprop="contributor"] [itemprop="image"]:not([src]) {
+  opacity: 0;
 }
 
 [id$="vertical-thread"] .labels {
